# FileOp

./: .gitignore  CMakeLists.txt  Makefile.win  Project1.dev  Project1.layout  list.c  list.h  main  main.c  phonebook.csv
FileOp-master/: CMakeLists.txt  Makefile.win  README.md  list.c  list.h  main.c
FileOp-master/glib-practice/: main.c
contact-generator/: contact-client.c  contact-client.h
contact-manager/: contact-client.c  contact-client.h  contact-generator.c  contact-generator.h  contact.c  contact.h
glib-practice/: main.c
simple-pipe-example/: simple-pipe-example.c  simple-pipe-example.h
sorting-with-exec/: sort-with-exec.c  sort-with-exec.h
